Главная страница десктопа

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -65,23 +65,28 @@
     padding: 0;
     padding-right: 175px;
     padding-left: 175px;
-    margin-top: 160px;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   .advantages__hidden {
-    display: none;
+    display: block;
   }
 
   .advantages__title {
     .font (53px; 57px; 700);
-    padding-bottom: 50px;
+    padding-bottom: 30px;
   }
 
   .advantages__item {
     .font (20px; 22px; 700);
     padding-top: 50px;
-    padding-bottom: 60px;
+    padding-bottom: 24px;
     width: 300px;
+  }
+
+    .advantages__svg {
+    top: 20px;
+    left: 1px;
   }
 }
