--- a/source/less/blocks/full-name.less
+++ b/source/less/blocks/full-name.less
@@ -55,5 +55,17 @@
 @media (min-width: @desktop-width) {
   .full-name {
     margin-right: 175px;
+    margin-bottom: 3px;
+  }
+
+  .full-name__block {
+    display: flex;
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 39px;
+  }
+
+    .full-name__name {
+    padding: 0 0 14px 15px;
   }
 }
