--- a/source/less/blocks/order-knitting.less
+++ b/source/less/blocks/order-knitting.less
@@ -74,7 +74,12 @@
     margin-left: -50px;
     margin-right: -50px;
     margin-top: 30px;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+
+    &::after {
+      height: 37px;
+      bottom: 165px;
+    }
   }
 
   .order-knitting__title {
@@ -87,7 +92,7 @@
   .order-knitting__text {
     .font (17px; 30px; 400);
     padding: 0 225px;
-    padding-top: 180px;
+    padding-top: 177px;
   }
 
   .order-knitting__fon {
