--- a/source/less/blocks/type.less
+++ b/source/less/blocks/type.less
@@ -95,3 +95,19 @@
     cursor: pointer;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .type__item {
+      padding-left: 75px;
+  }
+
+  .type__input + label::before {
+    left: -3px;
+    top: 30px;
+  }
+
+  .type__input--radio:checked + label::after {
+    left: 14px;
+    top: 47px;
+   }
+}
