--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -149,17 +149,22 @@
 
 @media (min-width: @desktop-width) {
   .catalog-item {
-    margin-bottom: 5px;
+    margin-bottom: 4px;
   }
 
   .catalog-item__title {
-    padding-right: 20px;
+    padding-bottom: 4px;
+    padding-right: 55px;
   }
 
   .catalog-item__list {
     display: flex;
     flex-wrap: wrap;
     margin-right: -50px;
+  }
+
+  .catalog-item__wrapper1 {
+    height: 462px;
   }
 
   .catalog-item__prodact {
@@ -169,15 +174,19 @@
     padding: 0;
     margin-right: 50px;
     width: 316px;
+    height: auto;
     box-sizing: border-box;
   }
 
   .catalog-item__characteristic {
+    height: auto;
     padding-top: 5px;
-    padding-bottom: 20px;
+    padding-bottom: 16px;
   }
 
   .catalog-item__wrapper {
+    width: 316px;
+    height: auto;
     flex-grow: 1;
     max-height: 100%;
     display: flex;
@@ -186,8 +195,12 @@
   }
 
   .catalog-item__price {
-    padding-top: 25;
-    padding-bottom: 25px;
+    height: 71px;
+    box-sizing: border-box;
+    padding-top: 21px;
+    padding-bottom: 0;
     padding-right: 160px;
+    margin-left: 29px;
+    margin-right: 30px;
   }
 }
