--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -61,6 +61,18 @@
     margin-right: -50px;
     margin-top: 30px;
     margin-bottom: 153px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      background-image: url("../img/bg-zigzag-fill.svg");
+      background-repeat: repeat-x;
+      background-position: 0 0;
+      width: 100%;
+      height: 37px;
+      left: 0;
+      bottom: -45px;
+    }
   }
 
   .catalog__title {
