--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -91,7 +91,7 @@
     bottom: 40px;
     background-image: url("../img/icon-mail.svg");
     background-repeat: no-repeat;
-    opacity: 0.3;
+    opacity: 0.5;
     filter: saturate(0);
   }
 
@@ -209,12 +209,12 @@
 @media (min-width: @desktop-width) {
   .filter__title {
     padding-left: 65px;
-    width: 180px;
+    width: 175px;
   }
 
   .filter__title--color {
     padding-left: 115px;
-    width: 230px;
+    width: 229px;
   }
 
   .filter__list-phone,
@@ -227,4 +227,20 @@
     margin-right: 175px;
     margin-bottom: 50px;
   }
+
+  .filter__mail {
+    &::after {
+      right: 230px;
+      bottom: 60px;
+    }
+  }
+
+  .filter__tel {
+    &::after {
+      content: "";
+      right: 235px;
+      bottom: 37px;
+    }
+  }
+
 }
