--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -28,12 +28,17 @@
 }
 
 @media (min-width: @desktop-width) {
+  .form {
+    margin-bottom: 48px;
+  }
+
   .form-button {
     margin-left: 175px;
     width: 230px;
   }
 
   .form-notice {
+    margin-top: 9px;
     margin-right: 175px;
   }
 }
