--- a/source/less/blocks/modal-order.less
+++ b/source/less/blocks/modal-order.less
@@ -101,3 +101,12 @@
     box-sizing: border-box;
   }
 }
+
+@media (min-width: @tablet-width) {
+  .modal-order {
+    top: 1120px;
+    left: 27%;
+    width: 566px;
+    padding: 45px 105px;
+  }
+}
