Подключила изображения в webp, оптимизировала изображения, подключила пикчерфилл

--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -57,9 +57,8 @@
   }
 
   .color__item {
-    padding: 0 130px 58px 130px;
-    width: 240px;
-    box-sizing: border-box;
+    padding: 0 0 58px 130px;
+    width: 133px;
   }
 
   .color-input + label::before {
@@ -94,7 +93,8 @@
 
 @media (min-width: @desktop-width) {
   .color__item {
-    padding: 0 180px 58px 80px;
+    padding: 0 30px 58px 79px;
+    width: 152px;
   }
 
   .color-input + label::before {
