--- a/source/less/blocks/modal-order.less
+++ b/source/less/blocks/modal-order.less
@@ -2,12 +2,18 @@
   display: none;
   position: absolute;
   top: 1044px;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 320px;
   box-sizing: border-box;
   background-color: white;
-  padding: 35px 10%;
+  padding: 35px;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
+  z-index: 11;
+}
+
+.modal-order-active {
+  display: block;
 }
 
 .modal-order__wrapper {
@@ -72,7 +78,6 @@
 @media (min-width: @tablet-width) {
   .modal-order {
     top: 1494px;
-    left: 10%;
     width: 566px;
     padding: 45px 105px;
   }
@@ -105,7 +110,6 @@
 @media (min-width: @tablet-width) {
   .modal-order {
     top: 1120px;
-    left: 27%;
     width: 566px;
     padding: 45px 105px;
   }
