--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -30,14 +30,22 @@
 }
 
 .page-header__toggle {
+  display: none;
+  position: absolute;
+  top: 31px;
+  right: 0;
+}
+
+.page-header__toggle--close {
+  display: none;
   position: absolute;
   top: 31px;
   right: 0;
 }
 
 .page-header__site-list {
-  display: none;
   .stylenone();
+  display: block;
   padding-top: 27px;
   padding-bottom: 27px;
   padding-left: 75px;
@@ -118,15 +126,16 @@
   display: none;
 }
 
+.page-header__menu--close {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .page-header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding-bottom: 0;
-    max-width: 820px;
-    margin: 0 auto;
-    box-sizing: border-box;
   }
 
   .page-header__logo {
@@ -239,7 +248,6 @@
 
 @media (min-width: @desktop-width) {
   .page-header {
-    max-width: 1050px;
     padding: 0;
   }
 
