--- a/source/less/blocks/product-category.less
+++ b/source/less/blocks/product-category.less
@@ -29,6 +29,20 @@
 .product-category__interior {
   background-color: @green;
   position: relative;
+
+  &:hover,
+  &:focus {
+    transform: translateY(-5px);
+  }
+
+  &:hover .product-category__text,
+  &:focus .product-category__text {
+    transform: translateY(-5px);
+  }
+
+  &:active .product-category__text {
+    opacity: 0.5;
+  }
 }
 
 .product-category__interior::after {
@@ -43,14 +57,8 @@
   opacity: 0.7;
 }
 
-.product-category__interior:hover::after,
-.product-category__interior:focus::after {
-  top: 15px;
-  height: 67px;
-}
-
-
 .product-category__text {
+  position: relative;
   width: 130px;
   .stylenone();
   .font (19px; 24px; 700);
@@ -58,13 +66,23 @@
   color: white;
 }
 
-.product-category__text:active {
-  opacity: 0.5;
-}
-
 .product-category__toys {
   position: relative;
   background-color: @greendark;
+
+  &:hover,
+  &:focus {
+    transform: translateY(-5px);
+  }
+
+  &:hover .product-category__text,
+  &:focus .product-category__text {
+    transform: translateY(-5px);
+  }
+
+  &:active .product-category__text {
+    opacity: 0.5;
+  }
 }
 
 .product-category__toys::after {
@@ -81,8 +99,12 @@
 
 .product-category__toys:hover::after,
 .product-category__toys:focus::after {
-  top: 15px;
-  height: 65px;
+  transform: translateY(-5px);
+}
+
+.product-category__interior:hover::after,
+.product-category__interior:focus::after {
+  transform: translateY(-5px);
 }
 
 .product-category__toys:active::after,
@@ -106,7 +128,7 @@
       width: 100%;
       height: 27px;
       left: 0;
-      bottom: -15px;
+      bottom: -10px;
     }
   }
 
@@ -146,7 +168,7 @@
 
   .product-category__text {
     .font (20px; 30px; 700);
-    padding: 30px 180px 30px 33px;
+    padding: 30px 180px 35px 33px;
   }
 
   .product-category__link {
@@ -191,7 +213,7 @@
       box-sizing: border-box;
       height: 40px;
       left: 0;
-      bottom: -20px;
+      bottom: -15px;
     }
   }
 
@@ -213,7 +235,7 @@
 
   .product-category__text {
     .font (20px; 30px; 700);
-    padding: 30px 350px 30px 35px;
+    padding: 30px 350px 35px 35px;
   }
 
   .product-category__header {
