--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -15,6 +15,11 @@
     margin-bottom: 50px;
   }
 
+  .form__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .form-notice {
     .font (17px; 30px; 400);
     margin-top: 5px;
