Исправила замечания финальной проверки

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -72,16 +72,16 @@
     .font (43px; 50px; 700);
     padding-bottom: 20px;
     position: relative;
-  }
 
-  .contacts__title::after {
-    content: "";
-    position: absolute;
-    width: 46px;
-    height: 81px;
-    right: 3px;
-    bottom: 5px;
-    background-image: url("../img/icon-flag.svg");
+    &::after {
+      content: "";
+      position: absolute;
+      width: 46px;
+      height: 81px;
+      right: 3px;
+      bottom: 5px;
+      background-image: url("../img/icon-flag.svg");
+    }
   }
 
   .contacts__table {
@@ -140,16 +140,16 @@
   .contacts__title {
     .font (53px; 57px; 700);
     padding-top: 53px;
-  }
 
-  .contacts__title::after {
-    content: "";
-    position: absolute;
-    width: 46px;
-    height: 82px;
-    left: -115px;
-    bottom: 6px;
-    background-image: url("../img/icon-flag.svg");
+    &::after {
+      content: "";
+      position: absolute;
+      width: 46px;
+      height: 82px;
+      left: -115px;
+      bottom: 6px;
+      background-image: url("../img/icon-flag.svg");
+    }
   }
 
   .contacts__table {
