--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -3,7 +3,7 @@
   margin-bottom: 60px;
 }
 
-.form-notice {
+.form__notice {
   .stylenone();
   .font (14px; 16px; 400);
   margin-bottom: 32px;
@@ -20,14 +20,14 @@
     justify-content: space-between;
   }
 
-  .form-notice {
+  .form__notice {
     .font (17px; 30px; 400);
     margin-top: 5px;
     margin-bottom: 15px;
     order: 2;
   }
 
-  .form-button {
+  .form__button {
     width: 230px;
   }
 }
@@ -37,12 +37,12 @@
     margin-bottom: 48px;
   }
 
-  .form-button {
+  .form__button {
     margin-left: 175px;
     width: 230px;
   }
 
-  .form-notice {
+  .form__notice {
     margin-top: 9px;
     margin-right: 175px;
   }
