--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -3,19 +3,19 @@
   position: relative;
   margin-left: -30px;
   margin-right: -30px;
-}
 
-.comments::after {
-  content: "";
-  position: absolute;
-  background-image: url("../img/bg-zigzag-line.svg");
-  background-repeat: repeat-x;
-  background-size: contain;
-  width: 100%;
-  height: 6px;
-  left: 0;
-  bottom: -5px;
-  opacity: 0.3;
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-repeat: repeat-x;
+    background-size: contain;
+    width: 100%;
+    height: 6px;
+    left: 0;
+    bottom: -5px;
+    opacity: 0.3;
+  }
 }
 
 .comments__title {
