--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -5,15 +5,15 @@
   text-transform: uppercase;
   .font (17px; 18px; 700);
   align-items: center;
-}
 
-.filter__title::after {
-  content: "";
-  width: 50px;
-  height: 1px;
-  background-color: @green;
-  flex-grow: 2;
-  margin-left: 30px;
+  &::after {
+    content: "";
+    width: 50px;
+    height: 1px;
+    background-color: @green;
+    flex-grow: 2;
+    margin-left: 30px;
+  }
 }
 
 .filter__list {
@@ -36,6 +36,7 @@
   &:focus,
   &:active {
     border-bottom: 2px solid @green;
+    outline: 0;
   }
 }
 
@@ -54,6 +55,7 @@
   &:focus,
   &:active {
     border-bottom: 2px solid @green;
+    outline: 0;
   }
 }
 
@@ -116,6 +118,7 @@
   &:focus,
   &:active {
     border: 2px solid @green;
+    outline: 0;
   }
 }
 
@@ -132,10 +135,10 @@
     width: 167px;
     box-sizing: border-box;
     flex-shrink: 0;
-  }
 
-  .filter__title--color {
-    padding-left: 50px;
+    &--color {
+      padding-left: 50px;
+    }
   }
 
   .filter__color {
@@ -206,11 +209,11 @@
   .filter__title {
     padding-left: 65px;
     width: 175px;
-  }
 
-  .filter__title--color {
-    padding-left: 115px;
-    width: 229px;
+    &--color {
+      padding-left: 115px;
+      width: 229px;
+    }
   }
 
   .filter__list-phone,
