--- a/source/less/blocks/popular-product.less
+++ b/source/less/blocks/popular-product.less
@@ -86,6 +86,10 @@
   text-align: center;
 }
 
+.popular-product__button {
+  display: block;
+}
+
 @media (min-width: @tablet-width) {
   .popular-product {
     margin-top: 13px;
